Onsale tab alignment issue

--- a/src/components/user-details-block/style.scss
+++ b/src/components/user-details-block/style.scss
@@ -28,7 +28,7 @@
 
 .user-block-nav {
   padding-bottom: 0.5rem;
-  max-width: 20rem;
+  max-width: 30rem;
   margin: auto;
   margin-bottom: 2rem;
   display: flex;
